# pencil_decomp

./: Cargo.toml  README.md
examples/: decomp2_gather.rs  decomp2_scatter.rs  decomp3_transpose.rs
pics/: pencil.tex
src/: decomp2.rs  decomp3.rs  dist.rs  distribution.rs  internal_macros.rs  lib.rs  main.rs  pencil.rs  simple_comms.rs
